--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body{
-    margin: 40px;
+    margin: auto;
     padding: 60px;
     max-width: 900px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
